--- a/css/main.css
+++ b/css/main.css
@@ -320,7 +320,7 @@ background-color: white;
 }
 .about .container {
   display: grid;
-  grid-template-columns: repeat(auto-fill , minmax(350px,1fr));
+  grid-template-columns: repeat(auto-fill , minmax(45%,1fr));
   gap: 20px;
 }
 .about .container .image {
