--- a/css/main.css
+++ b/css/main.css
@@ -320,7 +320,7 @@ background-color: white;
 }
 .about .container {
   display: grid;
-  grid-template-columns: repeat(auto-fill , minmax(45%,1fr));
+  grid-template-columns: repeat(auto-fill , minmax(550px,1fr));
   gap: 20px;
 }
 .about .container .image {
@@ -368,6 +368,11 @@ position: relative;
 .about .container .text :nth-child(2) {
   color: var(--p-color);
   line-height: 1.7;
+}
+@media (min-width:992px) and (max-width: 1200px) {
+  .about .container {
+    grid-template-columns: repeat(auto-fill , minmax(450px,1fr));
+  }
 }
 @media (max-width:992px) {
   .about .container .image {
