--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,7 @@ html {
     margin: 0 auto;
 
   }
+
 }
 
 /* // Medium devices (tablets, 768px and up) */
@@ -368,6 +369,14 @@ position: relative;
 .about .container .text :nth-child(2) {
   color: var(--p-color);
   line-height: 1.7;
+}
+@media (max-width:600px) {
+  .about .container {
+    grid-template-columns: repeat(auto-fill , minmax(350px,1fr));  
+  }
+  .personalized {
+    font-size: 70px;
+  }
 }
 @media (min-width:992px) and (max-width: 1200px) {
   .about .container {
